--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=order-service
 server.port=${SERVER_PORT:8081}
 
-springdoc.api-docs.path=/api-docs
-
 spring.datasource.hikari.minimumIdle=8
 spring.datasource.hikari.maximumPoolSize=40
 spring.datasource.hikari.idleTimeout=150000
@@ -12,6 +10,12 @@ spring.datasource.hikari.leakDetectionThreshold=400000
 spring.datasource.url=jdbc:postgresql://localhost:5432/order_agibank_db
 spring.datasource.username=fmass
 spring.datasource.password=lmi56n
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+kafka.topic.payment-confirmed=payment_confirmed
