--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=order-service
+spring.application.name=orderservice
 server.port=${SERVER_PORT:8081}
 
 spring.datasource.hikari.minimumIdle=8
