--- a/paymentservice/src/main/resources/application.properties
+++ b/paymentservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=payment-service
+spring.application.name=paymentservice
 server.port=${SERVER_PORT:8082}
 
 spring.kafka.bootstrap-servers=localhost:9092
