--- a/paymentservice/src/main/resources/application.properties
+++ b/paymentservice/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
+kafka.bootstrapServer=localhost:9092
 kafka.topic.payment-confirmed=payment_confirmed
