--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.hikari.connectionTimeout=400000
 spring.datasource.hikari.leakDetectionThreshold=400000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/order_agibank_db
-spring.datasource.username=fmass
-spring.datasource.password=lmi56n
+spring.datasource.username=change_user
+spring.datasource.password=change_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
