--- a/orderservice/src/main/resources/application-docker.properties
+++ b/orderservice/src/main/resources/application-docker.properties
@@ -3,8 +3,8 @@ spring.kafka.bootstrap-servers=broker:9092
 kafka.topic.payment-confirmed=payment_confirmed
 
 spring.datasource.url=jdbc:postgresql://db-postgresql:5432/order_agibank_db
-spring.datasource.username=fmass
-spring.datasource.password=lmi56n
+spring.datasource.username=change_user
+spring.datasource.password=change_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.show-sql=true
