Add new topic to properties and refactoring topics name

--- a/orderservice/src/main/resources/application-docker.properties
+++ b/orderservice/src/main/resources/application-docker.properties
@@ -1,6 +1,8 @@
 spring.kafka.bootstrap-servers=broker:9092
 
-kafka.topic.payment-confirmed=payment_confirmed
+kafka.bootstrapServer=broker:9092
+kafka.topic.orders.payment-confirmed=orders.payment-confirmed
+kafka.topic.orders=orders
 
 spring.datasource.url=jdbc:postgresql://db-postgresql:5432/order_agibank_db
 spring.datasource.username=change_user
