--- a/paymentservice/src/main/resources/application-docker.properties
+++ b/paymentservice/src/main/resources/application-docker.properties
@@ -4,4 +4,5 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 kafka.bootstrapServer=broker:9092
-kafka.topic.payment-confirmed=payment_confirmed
+kafka.topic.orders=orders
+kafka.topic.orders.payment-confirmed=orders.payment-confirmed
