--- a/paymentservice/src/main/resources/application.properties
+++ b/paymentservice/src/main/resources/application.properties
@@ -4,6 +4,10 @@ server.port=${SERVER_PORT:8082}
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrapServer=localhost:9092
-kafka.topic.payment-confirmed=payment_confirmed
+
+kafka.topic.orders=orders
+kafka.topic.orders.payment-confirmed=orders.payment-confirmed
